force-app/main/default/objects/Item__c/fields/Back_Cover_Image__c.field-meta.xml
<CustomField>
    <fullName>Back_Cover_Image__c</fullName>
    <formula>Image( Back_Cover_Link__c,&apos;Back Cover Image&apos;,200,200)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Back Cover Image</label>
    <type>Text</type>
</CustomField>