force-app/main/default/objects/Item__c/fields/Back_Cover_Link__c.field-meta.xml
<CustomField>
    <fullName>Back_Cover_Link__c</fullName>
    <label>Back Cover Link</label>
    <type>Url</type>
</CustomField>