force-app/main/default/objects/Item__c/fields/Front_Cover_Image__c.field-meta.xml
<CustomField>
    <fullName>Front_Cover_Image__c</fullName>
    <formula>IMAGE( Front_Cover_Link__c ,&apos;Front Cover Link&apos;,200,200)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Front Cover Image</label>
    <type>Text</type>
</CustomField>