force-app/main/default/objects/Item__c/fields/Front_Cover_Link__c.field-meta.xml
<CustomField>
    <fullName>Front_Cover_Link__c</fullName>
    <label>Front Cover Link</label>
    <type>Url</type>
</CustomField>