force-app/main/default/objects/Item__c/fields/Genre__c.field-meta.xml
<CustomField>
    <fullName>Genre__c</fullName>
    <label>Genre</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adventure Novel</fullName>
            </value>
            <value>
                <fullName>Autobiography</fullName>
            </value>
            <value>
                <fullName>Crime Fiction</fullName>
            </value>
            <value>
                <fullName>Novel</fullName>
            </value>
            <value>
                <fullName>Poetry</fullName>
            </value>
            <value>
                <fullName>Science Fiction</fullName>
            </value>
            <value>
                <fullName>Short Story</fullName>
            </value>
            <value>
                <fullName>Tragedy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>