force-app/main/default/objects/Item__c/fields/Is_Available__c.field-meta.xml
<CustomField>
    <fullName>Is_Available__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Available</label>
    <type>Checkbox</type>

</CustomField>