force-app/main/default/objects/Item__c/fields/Lector__c.field-meta.xml
<CustomField>
    <fullName>Lector__c</fullName>
    <defaultValue>&quot;unknown&quot;</defaultValue>
    <label>Lector</label>
    <length>50</length>
    <type>Text</type>
</CustomField>