force-app/main/default/objects/Item__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Version</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>