force-app/main/default/objects/Item__c/listViews/Audiobooks.listView-meta.xml
<ListView>
    <fullName>Audiobooks</fullName>
    <columns>NAME</columns>
    <columns>Genre__c</columns>
    <columns>Lector__c</columns>
    <columns>Version__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Audiobook</value>
    </filters>
    <label>Audiobooks</label>
</ListView>