force-app/main/default/objects/Item__c/listViews/Books.listView-meta.xml
<ListView>
    <fullName>Books</fullName>
    <columns>NAME</columns>
    <columns>Genre__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Paper Book</value>
    </filters>
    <label>Books</label>
</ListView>