force-app/main/default/objects/Item__c/listViews/Magazines.listView-meta.xml
<ListView>
    <fullName>Magazines</fullName>
    <columns>NAME</columns>
    <columns>Genre__c</columns>
    <columns>Publishing_House__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Magazine</value>
    </filters>
    <label>Magazines</label>
</ListView>