force-app/main/default/objects/Item__c/listViews/Unavailable_items.listView-meta.xml
<ListView>
    <fullName>Unavailable_items</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Genre__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Available__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Unavailable items</label>
</ListView>